--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "9.1.2",
+    "com.unity.2d.psdimporter": "8.0.5",
+    "com.unity.2d.spriteshape": "9.0.4",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.recorder": "4.0.3",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
